--- a/index.html
+++ b/index.html
@@ -842,10 +842,9 @@
                 <div class="about-text">
                     <h3>Digital Marketing Strategist & SEO Expert</h3>
                     <p>
-                        With over 2 years of experience in the digital marketing industry, I specialize in 
-                        creating comprehensive SEO strategies that drive organic traffic and boost online visibility. 
-                        My approach combines technical expertise with creative content strategies to deliver 
-                        measurable results for businesses of all sizes.
+                        With over 2 years of experience in the digital marketing industry, I specialize in creating comprehensive SEO strategies that drive organic traffic and boost online visibility. My approach combines technical expertise with creative content strategies to deliver measurable results for businesses of all sizes. I’ve had the opportunity to work with reputable companies such as Azzrak, Arabi SEO, and Digitalzeup, where I gained hands-on experience in diverse SEO projects and digital growth campaigns.
+
+
                     </p>
                     <p>
                         I'm passionate about staying ahead of search engine algorithm changes and implementing 
